--- a/fastly.toml
+++ b/fastly.toml
@@ -7,3 +7,8 @@ language = "rust"
 manifest_version = 2
 name = "fastly-compute-edge-demo"
 service_id = "3P8d99kmQc6GK2lpLPvtmk"
+
+[local_server]
+  [local_server.backends]
+    [local_server.backends.httpbin]
+      url = "https://httpbin.org"
