--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [dependencies]
-  fastly = "^0.8.0"
+fastly = "^0.8.0"
 
 [package]
-  authors = []
-  edition = "2021"
-  name = "fastly-compute-edge-demo"
-  publish = false
-  version = "0.1.0"
+authors = []
+edition = "2021"
+license = "MIT"
+name = "fastly-compute-edge-demo"
+publish = false
+version = "0.1.0"
 
 [profile]
   [profile.release]
