--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,12 @@ on:
   push:
   pull_request:
 
+env:
+  # for fastly cli
+  FASTLY_API_TOKEN:      ${{ secrets.FASTLY_API_TOKEN }}
+  # for terraform provider
+  FASTLY_API_KEY:        ${{ secrets.FASTLY_API_KEY }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,5 +30,35 @@ jobs:
         run: |
           fastly compute build
           fastly compute deploy
-        env:
-          FASTLY_API_TOKEN: ${{ secrets.FASTLY_API_TOKEN }}
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1.3.2
+        with:
+          terraform_version: 1.1.7
+      - name: Run terraform init
+        run: |
+          terraform init -input=false -no-color
+      - name: Run terraform plan
+        run: |
+          terraform plan -input=false -refresh -no-color
+      - name: Run terraform apply
+        if: github.ref == 'refs/heads/main'
+        run: |
+          terraform apply -no-color -auto-approve
+      - name: commit the diff
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          changed=$(git diff --name-only --diff-filter=ACMRT .)
+          if [[ -n "$changed" ]]; then
+            echo "Persist tfstate change"
+            git diff
+            git add .
+            git commit -m 'BOT: persist tfstate change'
+            git push origin main
+          fi
