--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-            toolchain: 1.54.0 # current Rust toolchain for Compute@Edge
+            toolchain: stable
             target: wasm32-wasi # WebAssembly target
 
       - name: Set up Fastly CLI
