use `FASTLY_API_KEY` for tf steps
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ on:
       - main
 
 env:
-  FASTLY_KEY:            ${{ secrets.FASTLY_KEY }}
+  FASTLY_API_KEY:        ${{ secrets.FASTLY_API_KEY }}
 
 jobs:
   terraform:
