secret: converge to use `FASTLY_API_KEY`
```
$ gh secret list
NAME            UPDATED
FASTLY_API_KEY  about 6 minutes ago
```

Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   # for fastly cli
-  FASTLY_API_TOKEN:      ${{ secrets.FASTLY_API_TOKEN }}
+  FASTLY_API_TOKEN:      ${{ secrets.FASTLY_API_KEY }}
   # for terraform provider
   FASTLY_API_KEY:        ${{ secrets.FASTLY_API_KEY }}
 
